# Train-Ticketing-App

./: .gitignore  CMakeLists.txt  TrainRide.cpp  TrainRide.h  Wagon.cpp  Wagon.h  main.cpp
Admin/: Operator.cpp  Operator.h
Data/: op_login.txt  rides.txt  user_login.txt
Data/Trains/: IR1932.csv
Encryption/: Encryption.cpp  Encryption.h
Kotlin/: train_ticketing_app.kt
Train Utils/: TrainRide.cpp  TrainRide.h  Wagon.cpp  Wagon.h
Users/: User.cpp  User.h
Utils/: Utils.cpp  Utils.h
